[gd_scene load_steps=5 format=3 uid="uid://djm24jp5u4n1o"]

[ext_resource type="Texture2D" uid="uid://kqvaafi7nawq" path="res://icon.svg" id="1_lncqm"]
[ext_resource type="Script" path="res://UI/ability_button.gd" id="2_q6bu5"]

[sub_resource type="InputEventKey" id="InputEventKey_pwnke"]

[sub_resource type="Shortcut" id="Shortcut_165eo"]
events = [SubResource("InputEventKey_pwnke")]

[node name="TextureButton" type="TextureButton"]
custom_minimum_size = Vector2(40, 0)
offset_right = 40.0
offset_bottom = 40.0
shortcut = SubResource("Shortcut_165eo")
texture_normal = ExtResource("1_lncqm")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_q6bu5")

[node name="KeyPress" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "1"
horizontal_alignment = 2

[node name="Cooldown" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
